VFS-10692 PR fixes: graphical overflow indicator in items-tooltip

--- a/src/app/styles/components/modal-file-subheader.scss
+++ b/src/app/styles/components/modal-file-subheader.scss
@@ -18,3 +18,19 @@
     @include font-semibold;
   }
 }
+
+.tooltip-items.modal-subheader-tip-content {
+  .tooltip-inner {
+    // flexible panel width on desktop
+    @media (max-width: 1250px) {
+      max-width: calc(100vw - 200px);
+    }
+    @media (max-width: $screen-xs-max) {
+      // empirical value to fit space from bottom of subheader to the bottom of page
+      max-height: 87vh;
+    }
+
+    // empirical value to fit space from bottom of subheader to the bottom of page
+    max-height: 85vh;
+  }
+}
