--- a/src/app/styles/utils/items-tooltip-content.scss
+++ b/src/app/styles/utils/items-tooltip-content.scss
@@ -4,17 +4,27 @@
       max-width: calc(100vw - 60px);
     }
   }
+  &.item-tooltip-ul-overflows {
+    .more-container {
+      position: absolute;
+      display: block;
+      height: 4em;
+      padding-top: 2em;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: linear-gradient(transparent 0%, $tooltip-bg 100%, $tooltip-bg);
+      text-align: center;
+      color: white;
+    }
+  }
   .tooltip-inner {
-    // flexible panel width on desktop
-    @media (max-width: 1250px) {
-      max-width: calc(100vw - 200px);
-    }
-    @media (max-width: $screen-xs-max) {
-      // empirical value to fit space from bottom of subheader to the bottom of page
-      max-height: 87vh;
-    }
-
-    // empirical value to fit space from bottom of subheader to the bottom of page
-    max-height: 85vh;
+    overflow: hidden;
+    position: relative;
+    max-width: calc(100vw - 200px);
+    max-height: 50vh;
+  }
+  .more-container {
+    display: none;
   }
 }
